plugins {
    id 'java'
    id "org.moditect.gradleplugin" version "1.0.0-rc3"
}

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

apply from: "$rootDir/deps/slf4j.gradle"
apply from: "$rootDir/deps/jackson.gradle"

dependencies {
    implementation project(':core')
    implementation project(':extension')

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
}

test {
    useJUnitPlatform()
}